Correct typos found by Pascone

--- a/Sources/Abstract.tex
+++ b/Sources/Abstract.tex
@@ -6,7 +6,7 @@
 %
 The use of texture, polarization and pseudo-spectral features captured in
 acquired images are shown to be useful for the successful classification of
-3 different deciduous tree species common to the northeastern part of the
+three different deciduous tree species common to the northeastern part of the
 United States using a linear support vector classifier. The observations
 are extended to the intra-class variance of the derived features and are shown
 to be useful for the prediction of the relative water content of leaves when
