--- a/Sources/Background/Nature_of_Light/Jones_Vectors.tex
+++ b/Sources/Background/Nature_of_Light/Jones_Vectors.tex
@@ -5,7 +5,7 @@
     % need subsub section on Devices
 For the special case of fully polarized EM waves, DOP = 1, the polarization of the beam can be described by a 2x 1 complex vector known as a Jones vector.  The Jones vector relies on the fact that the polarization state of a beam depends only on its relative $X$ and $Y$ intensities, as well as the phase delay between each respective component.
 
-Converting the equation for the electric component of the EM wave into a phasor makes it easy to see the parameters that determine the beams polarization.  A phasor represents a sinusoidal wave with a constant frequency.  The Jones vectors can be formulated from this representation as
+Converting the equation for the electric component of the EM wave into a phasor makes it easy to see the parameters that determine the beam's polarization.  A phasor represents a sinusoidal wave with a constant frequency.  The Jones vectors can be formulated from this representation as
 %
 \begin{align}
     \underline{\hat{E}}(z)=(\vec{i_x} E_{0x} e^{j\delta_x}+\vec{i_y} E_{0y} e^{j\delta_y })e^{-kz}
@@ -74,7 +74,7 @@ where $\psi$ is any angle in relation to the X axis.  Circular polarization is r
 \end{align}
 %
 \subsubsection{Optical Devices}
-Polarization can be naturally occurring, such as in the case of skylight, or it can be created by passing light through an optical device such as a linear polarizer or a quarter wave plate.  Jones vectors are useful for describing the polarization state of a EM wave, while Jones matrices describe non depolarizing optical devices and the transformation of pure incident polarization states through them.
+Polarization can be naturally occurring, such as in the case of skylight, or it can be created by passing light through an optical device such as a linear polarizer or a quarter wave plate.  Jones vectors are useful for describing the polarization state of an EM wave, while Jones matrices describe nondepolarizing optical devices and the transformation of pure incident polarization states through them.
 
 A linear polarizer is a device that transmits linear polarization states for incident light beams that are aligned with their transmission axis (TA) of the polarizer [14].  For example, if horizontally polarized light is passed through a polarizer with a $TA = 90^{\circ}$, all of the incident light will be extinguished.  In practice all of the light is not completely extinguished and there are often spectral differences to the response of polarizers.
 
@@ -177,7 +177,7 @@ The intensity of light emerging from a polarizer is governed by Malus law,
     I = I_0cos^2(\theta_i)
 \end{align}
 %
-where $I$ is the intensity of the exiting beam, $I_0$ is the intensity of the incident beam and $\theta_i$ is the angle between the incident polarization state, and the angle of the polarizer.   For incident unpolarized light the equation becomes $I / I_0 = \frac{1}{2}$.  Therefore, the maximum transmittance for a beam of light through a polarizer is 50%.  This number is significantly lower for polaroid film based polarizers and can cause potential problems with detector sensitivity for low lighting conditions.
+where $I$ is the intensity of the exiting beam, $I_0$ is the intensity of the incident beam and $\theta_i$ is the angle between the incident polarization state, and the angle of the polarizer.   For incident unpolarized light the equation becomes $I / I_0 = \frac{1}{2}$.  Therefore, the maximum transmittance for an unpolarized beam of light through a polarizer is 50%.  This number is significantly lower for polaroid film based polarizers and can cause potential problems with detector sensitivity for low lighting conditions.
 
 Wave plates create a phase delay between the fast and slow axis of incident linearly polarized light.  Its generalized Jones matrix form can be denoted with a relative phase delay $\delta=\delta_y-\delta_x$,
 \begin{align}
