--- a/Sources/Background/Nature_of_Light/Mueller_Matrices.tex
+++ b/Sources/Background/Nature_of_Light/Mueller_Matrices.tex
@@ -18,7 +18,7 @@ where
     \end{bmatrix}
 \end{align}
 %
-is 4x4 Mueller Matrix that describes the diattenuation, depolarization, and retardance of a materials polarization response to an input EM beam.
+is 4x4 Mueller Matrix that describes the diattenuation, depolarization, and retardance of a materials' polarization response to an input EM beam.
 
 Diattenuation – the two attenuations of orthogonal polarization states [7]
 
@@ -26,14 +26,14 @@ Retardance – the phase difference between two orthogonal polarization states [
 
 Depolarization – a process where polarized light becomes unpolarized [8]
 
-It has been shown that these parameters can be found by determining a samples’ corresponding Mueller Matrix. The scalar parameters are mathematically defined as,
+It has been shown that these parameters can be found by determining a sample's corresponding Mueller Matrix. The scalar parameters are mathematically defined as,
 \begin{align}
     %\emphasis{Diattenuation} = \frac{\sqrt{m_{01}^2 + m_{02}^2 + m_{03}^2}}{m_{00}} \\
 %    \emphasis{Retardance} = cos^{-1}(\frac{tr(M_{ret})}{2}-1) \\
 %    \emphasis{Depolarization} = 1 - \frac{\sqrt{\sum_{i,j}m_{ij}^2} -m_{00}^2}{\sqrt{3}m_{00}^2}
 \end{align}
 
-For non depolarizing materials, there MM can be converted into Jones matrices.   Examples of Mueller Matrices for common optical elements can be found in [7].  The general form of a linear polarizer with transmission axis at 0 degrees to the $x$ axis is
+For nondepolarizing materials, their MM can be converted into Jones matrices.   Examples of Mueller Matrices for common optical elements can be found in [7].  The general form of a linear polarizer with transmission axis at 0 degrees to the $x$ axis is
 %
 \begin{align}
     \mathbf{M} =
@@ -59,8 +59,6 @@ The effects of diattenuation, depolarization and retardance can be found to be r
         \mathbf{P} & \mathbf{m}
     \end{bmatrix}
 \end{align}
-where $\mathbf{D}^T$ is the diattenutation vector that describes the amount of decrease in overall polarization for each set of orthogonal polarization states. The m matrix represents the retardance of a material.
+The derivation of the MM decomposition was made known by Lu and Chipman and is reproduced in [14]. $\mathbf{D}^T$ is the diattenutation vector that describes the amount of decrease in overall polarization for each set of orthogonal polarization states. The m matrix represents the retardance of a material.
 
-$\mathbf{P}$ is the polarizance vector, and describes the amount of light that becomes polarized when unpolarized light is incident.  It is analogues to the effect of depolarization.  This vector can be measured by detecting the output Stokes vector of a material when unpolarized light is incident.  This effect is only evident in materials that create polarization.
-
-The derivation of the MM decomposition can be found in the Appendix and was made known by Lu and Chipman and is reproduced in [14].
+$\mathbf{P}$ is the polarizance vector, and describes the amount of light that becomes polarized when unpolarized light is incident.  It is analogous to the effect of depolarization.  This vector can be measured by detecting the output Stokes vector of a material when unpolarized light is incident.  This effect is only evident in materials that create polarization.
