--- a/Sources/Background/Nature_of_Light/Polarization_of_EM_Waves.tex
+++ b/Sources/Background/Nature_of_Light/Polarization_of_EM_Waves.tex
@@ -50,6 +50,7 @@ The factorization of this equation can be rearranged into the standard form of a
 \end{align}
 %
 And is graphed as
+[TODO replace this image with one that has both parameters]
 [Figure 2-Polarization Ellipse. Reproduced here without permission.
 where psi and chi represent the ellipticity and eccentricity of the ellipse.]
 
