--- a/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
+++ b/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
@@ -18,7 +18,7 @@ The transmission is derived directly from Snells equation,
 %
 Note that part of the transmitted spectra may be absorbed, although this is not considered in these equations.
 
-Two main scenarios are often presented when demonstrating the principals which guide the reflected and transmitted rays; when the incident electromagnetic wave is polarized perpendicular to the plane of incidence, and when the wave is polarized parallel to it.  The perpendicular polarized wave is often denoted S or TE for transverse electric, while the parallel scenario is often denoted P or TM for transverse magnetic.
+Two main scenarios are often presented when demonstrating the principles which guide the reflected and transmitted rays; when the incident electromagnetic wave is polarized perpendicular to the plane of incidence, and when the wave is polarized parallel to it.  The perpendicular polarized wave is often denoted S or TE for transverse electric, while the parallel scenario is often denoted P or TM for transverse magnetic.
 
 %Figure 4-Fresnel reflection and transmission. reproduced here without permission%
 
@@ -38,7 +38,7 @@ where Z is the wave impedance for medium 1 and 2.  The power coefficients for tr
     T_P = 1 - R_P
 \end{align}
 %
-The Brewster angle is a special case where the $S$ polarization state is completely transmitted and no reflection of the TM wave occurs.  The reflected ray is therefore completely $P$ polarized since $R_P$ is zero and $R_S$ is a nonzero intensity.  For perfect air glass interactions typically considered, this angle is approximately 55 degrees.  Figure 5 shows the reflection and transmission coefficients versus incident angle for these to mediums.
+The Brewster angle is a special case where the $P$ polarization state is completely transmitted and no reflection of the TM wave occurs.  The reflected ray is therefore completely $S$ polarized since $R_P$ is zero and $R_S$ is a nonzero intensity.  For perfect air glass interactions typically considered, this angle is approximately 55 degrees.  Figure 5 shows the reflection and transmission coefficients versus incident angle for these two media.
 
 %Figure 5-Transmission and reflection coefficients for air and glass. Reproduced here without permission.%
 
@@ -68,6 +68,6 @@ For incident unpolarized light the equation simplifies to
 %
 
 %
-Therefore, for ideal reflective surfaces, at the Brewster angle, light will be completely polarized parallel to the plane of incidence.
+Therefore, for ideal reflective surfaces, at the Brewster angle, light will be completely polarized perpendicular to the plane of incidence.
 
 Imperfect, non-ideal surfaces have the ability to reflect, transmit and absorb incident electromagnetic radiation.  The outcome of these interactions are related to the physiological makeup of the material, as well as its surface topology.  Multiple scattering mechanisms can be at work within a system, and numerous models have been attempted to balance the tradeoffs between practical realizability for measurements and accurate representation of scattering mechanisms [22, 23].  Only some of these models attempt to deal with the polarization of the incident, reflected, and transmitted beams.
