--- a/Sources/Background/Plant_Physiology/Plant_Physiology.tex
+++ b/Sources/Background/Plant_Physiology/Plant_Physiology.tex
@@ -1,9 +1,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Plant Physiology}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-A plants health is greatly determined by the availability of light, water, and key nutrients in the soil.  These elements are the fundamental inputs to photosynthesis, the process plants utilize to turn light energy into chemical energy for growth.  Nitrogen, Potassium, and Phosphorus are fertilizers (agricultural inputs) that can incur large costs when applied over hectares of farmland, but are needed for healthy plant growth and cell reproduction.
+A plant's health is greatly determined by the availability of light, water, and key nutrients in the soil.  These elements are the fundamental inputs to photosynthesis, the process plants utilize to turn light energy into chemical energy for growth.  Nitrogen, Potassium, and Phosphorus are fertilizers (agricultural inputs) that can incur large costs when applied over hectares of farmland, but are needed for healthy plant growth and cell reproduction.
 
-Water is also an essential agricultural input needed for plant photosynthesis and aids in nutrient transport.  Droughts are becoming a global epidemic and precision water management is becoming pivotal for a crops survival.
+Water is also an essential agricultural input needed for plant photosynthesis and aids in nutrient transport.  Droughts are becoming a global epidemic and precision water management is becoming pivotal for a crops' survival.
 
 The layers of a deciduous leaf contain protection mechanisms, transport systems, and reaction centers for the process of photosynthesis.
 
