--- a/Sources/Background/Plant_Physiology/RWC.tex
+++ b/Sources/Background/Plant_Physiology/RWC.tex
@@ -26,6 +26,6 @@ Correlations between the RWC and other physiological responses have been found i
 
 “An increase in reflectance…is not directly related to water content but indirectly, since a decrease in water content can lead to an increase in internal lead air space or cell breakdown which may increase reflectance and decrease transmittance [2]”.
 
-This increase in internal air space leads to multiple scattering at air wax boundaries, and creates differences in the reflection and transmission of light, absorption, and the S1 and S2 parameters of the polarization response.
+This increase in internal air space leads to multiple scattering at air wax boundaries, and creates differences in the reflection and transmission of light, absorption, and the $S1$ and $S2$ Stokes parameters of the polarization response.
 
 Field measurements of the physiological properties of plants are time consuming and error prone.  It is therefore beneficial to pursue solutions to quantifying these metrics in large area field measurements.
