--- a/Sources/Background/Remote_Sensing/Classification.tex
+++ b/Sources/Background/Remote_Sensing/Classification.tex
@@ -1,10 +1,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Classification of Vegetation Species}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-In addition to determining the relative health of vegetation, remote sensing can be useful to classify fields and canopies heterogeneous combination of species.  The spectral characteristics of each pixel in an acquired image can be combined into similar groups for classification and is known as spectral pattern recognition.
+In addition to determining the relative health of vegetation, remote sensing can be useful to classify fields' and canopies' heterogeneous combination of species.  The spectral characteristics of each pixel in an acquired image can be combined into similar groups for classification and is known as spectral pattern recognition.
 
 Pixel relationships that represent texture, feature size, etc. can also be used for classification and is known as spatial pattern recognition. This method is often computationally more intensive than its spectral counterpart, as additional calculations need to be performed in order to extract this information.
 
 A hybrid approach can also be used, which combines both spectral and spatial response patterns for the purpose of classifying image scenes.
 
-Challenges to this include the variation with vegetation with different seasons, health status and growth stage.
+Challenges to this include the variation of vegetation with different seasons, health status and growth stage.
