--- a/Sources/Background/Texture_and_Tone/Texture_and_Tone.tex
+++ b/Sources/Background/Texture_and_Tone/Texture_and_Tone.tex
@@ -8,7 +8,7 @@ A surface texture is classified according to the scale at which the human eye ca
 
 Tone is related to texture and is the grey level gradients distributed across an image.  It is the “relative brightness or color of objects on an image” [12].  If an image has no differences in tone, then the texture and other features are indiscernible.
 
-When a pixel is considered as a single color receptor, it represents only tone.  The scaling of the window size to include more pixels allows for texture to become more prevalent.   Scale is important when considering texture since texture is defined in relation to our perception of a materials surface.
+When a pixel is considered as a single color receptor, it represents only tone.  The scaling of the window size to include more pixels allows for texture to become more prevalent.   Scale is important when considering texture since texture is defined in relation to our perception of a materials' surface.
 
 
 \input{Sources/Background/Texture_and_Tone/GLCM}
