--- a/Sources/Experimental_Design/Experimental_Design.tex
+++ b/Sources/Experimental_Design/Experimental_Design.tex
@@ -15,7 +15,7 @@ This experiment was designed to investigate the linear polarizance vector of the
 
 Specular reflections are well known to create highly polarized light [sources]. The diffuse portion of reflection has been less investigated.  It has often been assumed that the diffuse portion is unpolarized due to multiple scattering and volume scattering caused by type B and C photons creating random orientations of light.  Recently the polarization of the diffuse component has been observed in studies [] to show indicators of physiological, chemical, and biological status.  The experiments presented here, attempt to demonstrate results that agree with previous outlined light leaf interactions in the specular direction, as well as extend the analysis for the diffuse direction.  The acquired polarization and texture data is processed for the purpose of determining the surface texture and internal scattering mechanisms for classification between various species, and investigation into the differences in these processes during decomposition and water stress conditions.
 
-There are numerous challenges to practical applications of BRDF models due to the large amount of measurements required to classify an object reflective polarization properties.  A digital microscope was utilized for the purpose of quantifying regions on leaves that including different surface structures such as veins, mold, undulations, cell walls, etc.
+There are numerous challenges to practical applications of BRDF models due to the large amount of measurements required to classify an object's reflective polarization properties.  A digital microscope was utilized for the purpose of quantifying regions on leaves that including different surface structures such as veins, mold, undulations, cell walls, etc.
 
 The polarizance of a material represents the first column of its Mueller Matrix, and determines the amount of polarization that results from unpolarized incident light.  These elements represent the linear polarization that results from the light material interactions, and can be useful for characterizing a material.  The polarizance can easily be acquired using simple light measuring Polarimetry techniques, when the incident light is unpolarized.  The reduction of measurements required to determine this vector is severely reduced when compared to other measurement techniques.
 
@@ -23,6 +23,6 @@ All measurements were performed using light incident at approximately the Brewst
 
 Using measurements acquired through a linear polarizer, the polarizance of each sample was calculated and plotted as a histogram.  The measurements were acquired using a digital microscope which produced images for each orientation of the polarizing filter.  These images were additionally processed for texture feature extraction using GLCM techniques.
 
-Each color image was split into its individual color channel to apply greyscale imaging techniques for pseudo spectral analysis.
+Each color image was split into its individual color channel to apply greyscale imaging techniques for pseudo-spectral analysis.
 
-Extracted features were observed and utilized for the purpose of classification between species, and determining the relative water content of individual leaves.
+Extracted features were observed and utilized for the purpose of classification among species, and determining the relative water content of individual leaves.
