--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,7 +1,7 @@
 \documentclass{mimosis}
 
 \usepackage{metalogo}
-
+\KOMAoptions{paper=letter}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Some of my favourite personal adjustments
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -155,6 +155,8 @@
   \include{Sources/Thanks}
 
   \tableofcontents
+  \listoffigures
+  \listoftables
 
 \mainmatter
 
