--- a/Sources/Feature_Extraction/Feature_Extraction.tex
+++ b/Sources/Feature_Extraction/Feature_Extraction.tex
@@ -15,7 +15,7 @@ Features for use in support vector classification and regression were extracted 
 
 Pixel analysis was performed on each sample to determine the S1 and S2 Stokes parameters.  These values were binned into histograms in order to reduce the dimensionality and storage requirements for the data.
 
-Window based GLCM texture analysis was similarly performed on each of the extracted samples.  The dissimilarity, correlation, contrast and entropy were calculated for each GLCM.  The window size for GLCM was manually optimized by testing clustering effects for 5px, 9px, 25px, 55px, 75px, and 95px window sizes.  A window size of 75 pixels was found to be ideal for this experimental design.
+Window-based GLCM texture analysis was similarly performed on each of the extracted samples.  The dissimilarity, correlation, contrast and entropy were calculated for each GLCM.  The window size for GLCM was manually optimized by testing clustering effects for 5px, 9px, 25px, 55px, 75px, and 95px window sizes.  A window size of 75 pixels was found to be ideal for this experimental design.
 
 Data was exported to csv files for future processing and analysis.
 
